<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView

            android:id="@+id/company_logo"
            android:layout_width="230dp"
            android:layout_height="171dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/menu_section"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/avenger_image"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/viewBTNId"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_background_design"
                android:text="@string/view"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:elevation="2dp"
                android:id="@+id/addBTNId"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:text="@string/add"
                android:textAlignment="center"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_background_design" />

            <Button
                android:elevation="5dp"
                android:id="@+id/avalibleBTNId"
                android:textAllCaps="false"
                android:text="@string/available_blood_group"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_background_design"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                />

            <Button
                android:elevation="5dp"
                android:id="@+id/aboutBTNId"
                android:textAllCaps="false"
                android:text="About"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_background_design"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>